# nirman-baas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ar.md  README.es.md  README.fr.md  README.hi.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md
database/: init.sql
docs/specs/: CREDENTIALS_ARCHITECTURE.md
docs/tutorials/: SECURE_CREDENTIALS_SETUP.md
gateway/: Dockerfile  go.mod
gateway/cmd/server/: main.go
gateway/internal/auth/: apikey.go  jwt.go  middleware.go  oauth.go
gateway/internal/cache/: redis.go
gateway/internal/config/: config.go
gateway/internal/database/: postgres.go  query.go  schema.go
hub/: .env.example  Dockerfile  bunfig.toml  package.json  tsconfig.json
hub/src/: index.ts
infra/nginx/: nginx.conf
infra/redis/: redis.conf
infra/scripts/: migrate.sh
nirman-registry/: README.md  registry.json  registry.schema.json
realtime/: Dockerfile  go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/src/nirman/: __init__.py  client.py
sdk/typescript/: package.json
shared/: index.ts  package.json
workers/: Dockerfile  pyproject.toml
workers/app/: celery.py  config.py  database.py
workers/app/tasks/: __init__.py  cleanup_task.py  email_task.py  notification_task.py  webhook_task.py
(+57 files in other folders)
